fix menu top positioning on mobile

--- a/static/css/cards/menu.css
+++ b/static/css/cards/menu.css
@@ -119,6 +119,8 @@
 
 @media(max-width: 767px) {
   .main-nav {
+    top: 53px;
+    height: calc(100% - 53px);
     width: 100%;
   }
 }
